objects/infy_dm__Data_Masking_Field_Config__c.object
<CustomObject>
    <fields>
        <fullName>infy_dm__Data_Type__c</fullName>
        <label>Data Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Delimeter__c</fullName>
        <label>Delimeter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>_</fullName>
                    <default>true</default>
                    <label>_</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>#</fullName>
                </value>
                <value>
                    <fullName>&amp;</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>infy_dm__Domain__c</fullName>
        <defaultValue>&quot;@company.com&quot;</defaultValue>
        <description>Email Domain</description>
        <inlineHelpText>Email Domain.
For eg: @company.com</inlineHelpText>
        <label>Domain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Encryption_Key__c</fullName>
        <label>Encryption Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__End_Date__c</fullName>
        <description>End date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>infy_dm__Masked_Out_Character_Length__c</fullName>
        <label>Masked Out Character Length</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Masked_Out_Character__c</fullName>
        <label>Masked Out Character</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Masking_Mechanism__c</fullName>
        <description>Masking Mechanism for the field</description>
        <label>Masking Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Encryption</fullName>
                </value>
                <value>
                    <fullName>Masked Out</fullName>
                </value>
                <value>
                    <fullName>Random Substitution</fullName>
                </value>
                <value>
                    <fullName>Dictionary Substitution</fullName>
                </value>
                <value>
                    <fullName>Randomization</fullName>
                </value>
                <value>
                    <fullName>Shuffling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>infy_dm__Masking_Rule__c</fullName>
        <label>Masking Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male Name</fullName>
                </value>
                <value>
                    <fullName>Female Name</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Province</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>AES128 Encryption</fullName>
                </value>
                <value>
                    <fullName>AES192 Encryption</fullName>
                </value>
                <value>
                    <fullName>AES256 Encryption</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Alphanumeric</fullName>
                </value>
                <value>
                    <fullName>Alphabets</fullName>
                </value>
                <value>
                    <fullName>TestAT__First_Name__c</fullName>
                </value>
                <value>
                    <fullName>TestAT__Mobile__c</fullName>
                </value>
                <value>
                    <fullName>TestAT__Test_PS__c</fullName>
                </value>
                <value>
                    <fullName>TestAT__Currency__c</fullName>
                </value>
                <value>
                    <fullName>TestAT__Test_Field__c</fullName>
                </value>
                <value>
                    <fullName>TestAT__Phone__c</fullName>
                </value>
                <value>
                    <fullName>TestAT__Number__c</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>infy_dm__Number__c</fullName>
        <label>Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infy_dm__Object_Name__c</fullName>
        <label>Data Masking Object Config</label>
        <referenceTo>infy_dm__Data_Masking_Object_Config__c</referenceTo>
        <relationshipLabel>Data Masking Field Config</relationshipLabel>
        <relationshipName>Data_Masking_Field_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>infy_dm__Post_Delimeter__c</fullName>
        <description>Post delimeter for email</description>
        <label>Post Delimeter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Pre_Delimeter__c</fullName>
        <description>Pre Delimeter</description>
        <label>Pre Delimeter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Rule__c</fullName>
        <label>Rule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Start_Date__c</fullName>
        <description>start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>infy_dm__TEXT__c</fullName>
        <label>TEXT</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__longta__c</fullName>
        <label>longta</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__richta__c</fullName>
        <label>richta</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>infy_dm__ta__c</fullName>
        <label>ta</label>
        <type>TextArea</type>
    </fields>
    <label>Data Masking Field Config</label>
    <listViews>
        <fullName>infy_dm__All</fullName>
        <columns>NAME</columns>
        <columns>infy_dm__Object_Name__c</columns>
        <columns>infy_dm__Masking_Mechanism__c</columns>
        <columns>infy_dm__Masking_Rule__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Masking Field Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>